# Argus

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
airflow_dags/: __init__.py
bronze_layer/: __init__.py  processor.py  test_processor.py
dags/: qmt_daily_collection_dag.py
doc/: backlog.md  data_governance_and_dictionary.md  plan.md  quality_kpi.md  requirements_traceability_matrix.md  risk_register.md  system_design.md  tushare_pro_integration_design.md  user_story.md
event_driven_architecture/: __init__.py  event_schema.py  kafka_consumer.py  kafka_producer.py  test_event_schema.py  test_kafka_consumer.py  test_kafka_producer.py
src/collectors/: qmt_collector.py
tests/collectors/: __init__.py  test_qmt_collector.py
